# hebrew-whisper-youtube

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  test_cli.sh
src/whisper_transcriber/: __init__.py  __main__.py  cli.py  concurrent_playlist_processor.py  downloader.py  metadata_formatter.py  model_manager.py  playlist_processor.py  qwen_translator.py  resource_manager.py  transcriber.py  transcript_io.py  translator.py  utils.py
