[project]
name = "whisper-transcriber"
version = "0.1.0"
description = "CLI tool to download YouTube audio and transcribe it using OpenAI Whisper"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "yt-dlp>=2025.7.21",
    "faster-whisper>=1.1.1",
    "click>=8.2.1",
    "rich>=14.1.0",
    "torch>=2.7.1",
]

[project.scripts]
whisper-transcriber = "whisper_transcriber.cli:main"
